feat: Update .gitignore to include additional file patterns for environment variables, cache, logs, and IDE-specific files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,21 @@
+# Virtual environments
 .venv/
+
+# Environment variables
 *.env
+
+# Python cache files
+__pycache__/
+*.pyc
+*.pyo
+
+# Logs
+*.log
+
+# System files
+.DS_Store
+Thumbs.db
+
+# IDE-specific files
+.vscode/
+.idea/
